testsuite/poke.pkl/postincr-diag-3.pk
/* { dg-do compile } */

E_generic  /* { dg-error "invalid operand.*\n.*expected integral or offset, got Exception" } */
++;
